<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:textAlignment="center">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCity"
        android:layout_width="287dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewAdress"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNumerId">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textViewCity" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageViewAdress"
        android:layout_width="53dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewIdentifier"
        app:srcCompat="@drawable/mapa"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageViewIdentifier"
        android:layout_width="53dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPhoto"
        app:srcCompat="@drawable/tarjeta_de_estudiante"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageViewPhoto"
        android:layout_width="53dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewName"
        app:srcCompat="@drawable/name"
        android:contentDescription="TODO" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:layout_width="287dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewName"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textViewName"
            android:singleLine="true"
            android:textColor="#131111" />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/imageViewName"
        android:layout_width="53dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/usuario"
        android:contentDescription="TODO" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNumerId"
        android:layout_width="287dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewIdentifier"
        app:layout_constraintTop_toBottomOf="@+id/buttonPhoto">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textViewNumberId" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/editTextExpression"
        android:layout_width="369dp"
        android:layout_height="103dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:maxLength="600"
        android:maxLines="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleExpression" />

    <TextView
        android:id="@+id/textViewTitleExpression"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="28dp"
        android:text="@string/textViewCreativeExpression"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/editTextExpression"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCity" />

    <Button
        android:id="@+id/buttonFormSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="56dp"
        android:text="@string/buttonFormularSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextExpression" />

    <Button
        android:id="@+id/buttonPhoto"
        android:layout_width="287dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/buttonFormularGallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewPhoto"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName" />


</androidx.constraintlayout.widget.ConstraintLayout>